src/main/java/org/astw/parser/targetexp/antlr/TargetExpParser.java
// Generated from TargetExp.g4 by ANTLR 4.7

package org.astw.parser.targetexp.antlr;

import org.astw.foe.*;
import org.astw.foe.impl.*;
import org.astw.foe.impl.eventexp.*;
import org.astw.foe.impl.frm.*;
import org.astw.foe.impl.nonnumeric.*;
import org.astw.foe.impl.numeric.*;
import org.astw.foe.impl.numeric.indexexp.*;
import org.astw.*;
import org.astw.util.*;
import org.astw.util.Const;
import org.astw.analyticrules.*;
import org.astw.parser.numConditionalAggregation.*;
import org.astw.parser.nonNumConditinoalAggregation.*;

import java.util.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TargetExpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OR=1, AND=2, NEG=3, IMPL=4, End=5, EQUAL=6, NOTEQUAL=7, GT=8, GTE=9, LT=10, 
		LTE=11, Plus=12, Minus=13, Multiply=14, Divide=15, String=16, True=17, 
		False=18, EXIST=19, FORALL=20, DOT=21, LP=22, RP=23, WS=24, Var=25, SPEC=26, 
		AttName=27, Qf=28, Quote=29, NEWLINE=30, PosNumber=31, NUMERIC_AGG_FUNC_SUM=32, 
		NUMERIC_AGG_FUNC_AVG=33, NUMERIC_AGG_FUNC_MAX=34, NUMERIC_AGG_FUNC_MIN=35, 
		NUMERIC_AGG_FUNC_COUNT=36, NUMERIC_AGG_FUNC_COUNTVAL=37, NON_NUMERIC_AGG_FUNC_CONCAT=38;
	public static final int
		RULE_targetExp = 0, RULE_nonNumExp = 1, RULE_numExp = 2, RULE_indexExp = 3, 
		RULE_query = 4, RULE_queryNumeric = 5, RULE_realNumber = 6;
	public static final String[] ruleNames = {
		"targetExp", "nonNumExp", "numExp", "indexExp", "query", "queryNumeric", 
		"realNumber"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'||'", "'&&'", "'!'", "'->'", "';'", "'=='", "'!='", "'>'", "'>='", 
		"'<'", "'<='", "'+'", "'-'", "'*'", "'\\'", null, null, null, null, null, 
		"'.'", "'('", "')'", null, null, null, null, "'e['", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OR", "AND", "NEG", "IMPL", "End", "EQUAL", "NOTEQUAL", "GT", "GTE", 
		"LT", "LTE", "Plus", "Minus", "Multiply", "Divide", "String", "True", 
		"False", "EXIST", "FORALL", "DOT", "LP", "RP", "WS", "Var", "SPEC", "AttName", 
		"Qf", "Quote", "NEWLINE", "PosNumber", "NUMERIC_AGG_FUNC_SUM", "NUMERIC_AGG_FUNC_AVG", 
		"NUMERIC_AGG_FUNC_MAX", "NUMERIC_AGG_FUNC_MIN", "NUMERIC_AGG_FUNC_COUNT", 
		"NUMERIC_AGG_FUNC_COUNTVAL", "NON_NUMERIC_AGG_FUNC_CONCAT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TargetExp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TargetExpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TargetExpContext extends ParserRuleContext {
		public TargetExpression te;
		public NonNumExpContext nne;
		public NumExpContext ne;
		public TerminalNode EOF() { return getToken(TargetExpParser.EOF, 0); }
		public NonNumExpContext nonNumExp() {
			return getRuleContext(NonNumExpContext.class,0);
		}
		public NumExpContext numExp() {
			return getRuleContext(NumExpContext.class,0);
		}
		public TargetExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).enterTargetExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).exitTargetExp(this);
		}
	}

	public final TargetExpContext targetExp() throws RecognitionException {
		TargetExpContext _localctx = new TargetExpContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_targetExp);
		try {
			setState(22);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(14);
				((TargetExpContext)_localctx).nne = nonNumExp();
				setState(15);
				match(EOF);


				            ((TargetExpContext)_localctx).te =  ((TargetExpContext)_localctx).nne.nonNumericExpression;
				        
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(18);
				((TargetExpContext)_localctx).ne = numExp(0);
				setState(19);
				match(EOF);

				                    
				            ((TargetExpContext)_localctx).te =  ((TargetExpContext)_localctx).ne.numericExpression;
				        
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonNumExpContext extends ParserRuleContext {
		public NonNumExp nonNumericExpression;
		public Token nneString;
		public Token nneBool;
		public QueryContext nneQuery;
		public Token concatAgg;
		public NonNumExpContext nne;
		public TerminalNode String() { return getToken(TargetExpParser.String, 0); }
		public TerminalNode True() { return getToken(TargetExpParser.True, 0); }
		public TerminalNode False() { return getToken(TargetExpParser.False, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode NON_NUMERIC_AGG_FUNC_CONCAT() { return getToken(TargetExpParser.NON_NUMERIC_AGG_FUNC_CONCAT, 0); }
		public TerminalNode LP() { return getToken(TargetExpParser.LP, 0); }
		public TerminalNode RP() { return getToken(TargetExpParser.RP, 0); }
		public NonNumExpContext nonNumExp() {
			return getRuleContext(NonNumExpContext.class,0);
		}
		public NonNumExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonNumExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).enterNonNumExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).exitNonNumExp(this);
		}
	}

	public final NonNumExpContext nonNumExp() throws RecognitionException {
		NonNumExpContext _localctx = new NonNumExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nonNumExp);
		int _la;
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case String:
				enterOuterAlt(_localctx, 1);
				{
				setState(24);
				((NonNumExpContext)_localctx).nneString = match(String);


				            StringBuilder sb = new StringBuilder((((NonNumExpContext)_localctx).nneString!=null?((NonNumExpContext)_localctx).nneString.getText():null));
				            sb = sb.deleteCharAt(sb.length()-1);
				            sb = sb.deleteCharAt(0);
				            String str = new String(sb);

				            System.out.println("DEBUGA: NonNE-String: "+(((NonNumExpContext)_localctx).nneString!=null?((NonNumExpContext)_localctx).nneString.getText():null)+" -> "+str);
				            ((NonNumExpContext)_localctx).nonNumericExpression =  new NonNumExpString(str);
				         
				}
				break;
			case True:
			case False:
				enterOuterAlt(_localctx, 2);
				{
				setState(26);
				((NonNumExpContext)_localctx).nneBool = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==True || _la==False) ) {
					((NonNumExpContext)_localctx).nneBool = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				            System.out.println("DEBUGA: NonNE-True: "+(((NonNumExpContext)_localctx).nneBool!=null?((NonNumExpContext)_localctx).nneBool.getText():null));
				            try{
				                ((NonNumExpContext)_localctx).nonNumericExpression =  new NonNumExpBoolean((((NonNumExpContext)_localctx).nneBool!=null?((NonNumExpContext)_localctx).nneBool.getText():null));
				            }catch(Exception e){
				              notifyErrorListeners("ERROR: " + e.getMessage());
				            }
				         
				}
				break;
			case Qf:
				enterOuterAlt(_localctx, 3);
				{
				setState(28);
				((NonNumExpContext)_localctx).nneQuery = query();

				            System.out.println("DEBUGA: NonNE-Query: "+(((NonNumExpContext)_localctx).nneQuery!=null?_input.getText(((NonNumExpContext)_localctx).nneQuery.start,((NonNumExpContext)_localctx).nneQuery.stop):null));
				            ((NonNumExpContext)_localctx).nonNumericExpression =  ((NonNumExpContext)_localctx).nneQuery.attAccessor;
				         
				}
				break;
			case NON_NUMERIC_AGG_FUNC_CONCAT:
				enterOuterAlt(_localctx, 4);
				{
				setState(31);
				((NonNumExpContext)_localctx).concatAgg = match(NON_NUMERIC_AGG_FUNC_CONCAT);

				            System.out.println("DEBUGA: CONCAT-agg-func: "+(((NonNumExpContext)_localctx).concatAgg!=null?((NonNumExpContext)_localctx).concatAgg.getText():null));
				                       
				            String aggStatement = (((NonNumExpContext)_localctx).concatAgg!=null?((NonNumExpContext)_localctx).concatAgg.getText():null);
				            
				            //filter out function name and the brackets
				            aggStatement = aggStatement.replace("CONCAT{","");
				            aggStatement = aggStatement.replace("}","");
				            System.out.println("DEBUGA: CONCAT-agg-func content: "+aggStatement);
				            
				            try{
				                NonNumConditionalAggregation nnca = 
				                    new NonNumConditionalAggregationParser().parse(aggStatement);
				                nnca.setAggregationType(Const.NonNumAggregationType.CONCAT);
				                
				                System.out.println("DEBUGA: AggType: "+Const.NonNumAggregationType.CONCAT);

				                ((NonNumExpContext)_localctx).nonNumericExpression =  nnca;

				            }catch(Exception e){
				              notifyErrorListeners("ERROR: " + e.getMessage());
				            }
				         
				}
				break;
			case LP:
				enterOuterAlt(_localctx, 5);
				{
				setState(33);
				match(LP);
				setState(34);
				((NonNumExpContext)_localctx).nne = nonNumExp();
				setState(35);
				match(RP);

				            System.out.println("DEBUGA: NonEE-BRACKET: "+(((NonNumExpContext)_localctx).nne!=null?_input.getText(((NonNumExpContext)_localctx).nne.start,((NonNumExpContext)_localctx).nne.stop):null));
				            ((NonNumExpContext)_localctx).nonNumericExpression =  new BracketNonNumExp(((NonNumExpContext)_localctx).nne.nonNumericExpression);
				         
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumExpContext extends ParserRuleContext {
		public NumExp numericExpression;
		public NumExpContext ne1;
		public RealNumberContext ne;
		public QueryNumericContext neQuery;
		public Token sumAgg;
		public Token avgAgg;
		public Token minAgg;
		public Token maxAgg;
		public Token cntAgg;
		public NumExpContext ne5;
		public Token op;
		public NumExpContext ne2;
		public RealNumberContext realNumber() {
			return getRuleContext(RealNumberContext.class,0);
		}
		public QueryNumericContext queryNumeric() {
			return getRuleContext(QueryNumericContext.class,0);
		}
		public TerminalNode NUMERIC_AGG_FUNC_SUM() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_SUM, 0); }
		public TerminalNode NUMERIC_AGG_FUNC_AVG() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_AVG, 0); }
		public TerminalNode NUMERIC_AGG_FUNC_MIN() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_MIN, 0); }
		public TerminalNode NUMERIC_AGG_FUNC_MAX() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_MAX, 0); }
		public TerminalNode NUMERIC_AGG_FUNC_COUNT() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_COUNT, 0); }
		public TerminalNode NUMERIC_AGG_FUNC_COUNTVAL() { return getToken(TargetExpParser.NUMERIC_AGG_FUNC_COUNTVAL, 0); }
		public TerminalNode LP() { return getToken(TargetExpParser.LP, 0); }
		public TerminalNode RP() { return getToken(TargetExpParser.RP, 0); }
		public List<NumExpContext> numExp() {
			return getRuleContexts(NumExpContext.class);
		}
		public NumExpContext numExp(int i) {
			return getRuleContext(NumExpContext.class,i);
		}
		public TerminalNode Plus() { return getToken(TargetExpParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(TargetExpParser.Minus, 0); }
		public NumExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).enterNumExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TargetExpListener ) ((TargetExpListener)listener).exitNumExp(this);
		}
	}

	public final NumExpContext numExp() throws RecognitionException {
		return numExp(0);
	}

	private NumExpContext numExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		NumExpContext _localctx = new NumExpContext(_ctx, _parentState);
		NumExpContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_numExp, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Minus:
			case PosNumber:
				{
				setState(41);
				((NumExpContext)_localctx).ne = realNumber();

				            System.out.println("DEBUGA: NE-INT: "+(((NumExpContext)_localctx).ne!=null?_input.getText(((NumExpContext)_localctx).ne.start,((NumExpContext)_localctx).ne.stop):null));
				            try{
				                ((NumExpContext)_localctx).numericExpression =  new NumExpNumber((((NumExpContext)_localctx).ne!=null?_input.getText(((NumExpContext)_localctx).ne.start,((NumExpContext)_localctx).ne.stop):null));
				            }catch(Exception e){
				              notifyErrorListeners("ERROR: " + e.getMessage());
				            }
				      
				}
				break;
			case Qf:
				{
				setState(44);
				((NumExpContext)_localctx).neQuery = queryNumeric();

				            System.out.println("DEBUGA: NE-Query: "+(((NumExpContext)_localctx).neQuery!=null?_input.getText(((NumExpContext)_localctx).neQuery.start,((NumExpContext)_localctx).neQuery.stop):null));
				            ((NumExpContext)_localctx).numericExpression =  ((NumExpContext)_localctx).neQuery.attAccessorNumeric;
				      
				}
				break;
			case NUMERIC_AGG_FUNC_SUM:
				{
				setState(47);
				((NumExpContext)_localctx).sumAgg = match(NUMERIC_AGG_FUNC_SUM);

				            System.out.println("DEBUGA: SUM-agg-func: "+(((NumExpContext)_localctx).sumAgg!=null?((NumExpContext)_localctx).sumAgg.getText():null));
				            
				            String aggStatement = (((NumExpContext)_localctx).sumAgg!=null?((NumExpContext)_localctx).sumAgg.getText():null);
				            
				            //filter out function name and the brackets
				            aggStatement = aggStatement.replace("SUM{","");
				            aggStatement = aggStatement.replace("}","");
				            System.out.println("DEBUGA: SUM-agg-func content: "+aggStatement);
				            
				            try{
				                NumConditionalAggregation nca = 
				                    new NumConditionalAggregationParser().parse(aggStatement);
				                nca.setAggregationType(Const.NumAggregationType.SUM);
				                
				                System.out.println(nca.getAggregationType());
				                
				                System.out.println("DEBUGA: AggType: "+Const.NumAggregationType.SUM);

				                ((NumExpContext)_localctx).numericExpression =  nca;

				            }catch(Exception e){
				              notifyErrorListeners("ERROR: " + e.getMessage());
				            }
				            
				      
				}
				break;
			case NUMERIC_AGG_FUNC_AVG:
				{
				setState(49);
				((NumExpContext)_localctx).avgAgg = match(NUMERIC_AGG_FUNC_AVG);
